# PeriodicFMM

./: .clang-format  .gitignore  CMakeLists.txt  InstallationInstructions.md  MakefileInc.mk  README.md  do-cmake.sh
Examples/: CMakeLists.txt
Examples/C/: CMakeLists.txt  main.c
Examples/Python/: CMakeLists.txt  Interface-py.cpp  example.py  setup.py.in
FMM/: CMakeLists.txt  FMMWrapper.cpp  FMMWrapper.h  FMMWrapperWall2D.cpp  FMMWrapperWall2D.h  LaplaceCustomKernel.hpp  RPYFMMWrapper.cpp  RPYFMMWrapper.h  StokesRegSingleLayerKernel.hpp
FMM/include/: FMMWrapper.hpp  FMMWrapperWall2D.hpp  StokesRegSingleLayerKernel.hpp
FMM/src/: FMMWrapper.cpp  FMMWrapperWall2D.cpp
Interface/: FMMWrapper-c.cpp  FMMWrapper-c.h  FMMWrapper-f.f90  FMMWrapper-py.cpp  FMMWrapperWall2D-c.cpp  FMMWrapperWall2D-c.h  FMMWrapperWall2D-f.f90
Lib/: CMakeLists.txt
Lib/include/PeriodicFMM/: FMMWrapper-c.h  FMMWrapper.hpp  FMMWrapperWall2D-c.h  FMMWrapperWall2D.hpp  LaplaceLayerKernel.hpp  StokesRegSingleLayerKernel.hpp  Timer.hpp
Lib/src/: FMMWrapper-c.cpp  FMMWrapper-py.cpp  FMMWrapper.cpp  FMMWrapperWall2D-c.cpp  FMMWrapperWall2D.cpp  Interface-py.cpp
M2LLaplace/: CMakeLists.txt
M2LLaplace/1D3D_Charge/: Laplace1D3D.cpp  Makefile
M2LLaplace/1D3D_Dipole/: Laplace1D3DDipole.cpp  Makefile
M2LLaplace/1D3D_Direct/: Makefile
M2LLaplace/2D3D_Charge/: Laplace2D3D.cpp  Makefile
M2LLaplace/2D3D_Dipole/: Laplace2D3DDipole.cpp  Makefile
M2LLaplace/3D3D_Dipole/: .gitignore  Dipole3D3D.ipynb  Laplace3D3DDipole.cpp  Makefile
M2LLaplace/src/: Laplace1D3D.cpp  Laplace1D3DDipole.cpp  Laplace2D3DDipole.cpp  Laplace3D3D.cpp  Laplace3D3DDipole.cpp  main.cpp
M2LStokes/: CMakeLists.txt
M2LStokes/1D3D/: Makefile  Stokes1D3D.cpp
M2LStokes/2D3D/: Makefile  Stokes2D3D.cpp
M2LStokes/3D3D/: Makefile  Stokes3D3D.cpp
M2LStokes/src/: Stokes3D3D.cpp
ModuleTest/: MakefileInc.mk
ModuleTest/C/: Makefile  main.c
ModuleTest/Fortran/: Makefile  main.f90
ModuleTest/Python/: Makefile  Makefile.in  Makefile.intelmpi_linux  Makefile.ubuntu  example.py
ModuleTest/RPYFMM3D/: main.cpp
ModuleTest/StokesFMM3D/: .gitignore  Ewald.hpp  Makefile  main.cpp  regularized_stokeslet.cpp  regularized_stokeslet.hpp  test.py  timing.py
ModuleTest/StokesFMMWall2D/: .gitignore  ChebNodal.cpp  Makefile  main.cpp  test.py
Stokes3D3D/: Ewald.hpp  FMMWrapper.cpp  FMMWrapper.h  Makefile  main.cpp
Test/: CMakeLists.txt
Test/StokesFMM3D/: .gitignore  ChebNodal.h  main.cpp
Test/StokesFMMWall2D/: main.cpp
Util/: ChebNodal.cpp  SVD_pvfmm.hpp  Timer.hpp  cmdparser.hpp
cmake/: FindMKL.cmake  FindPVFMM.cmake
common/: MakefileTemplate
doc/: InstallationInstructions.md
examples/C/: main.c
examples/StokesFMMWall2D/: timing.py
include/: FMMWrapper.hpp  FMMWrapperWall2D-c.h  FMMWrapperWall2D.hpp  LaplaceLayerKernel.hpp
include/FMM/: FMMWrapper-c.h
src/: CMakeLists.txt  FMMWrapper-c.cpp  FMMWrapper-py.cpp  FMMWrapper.cpp  FMMWrapperWall2D-c.cpp  FMMWrapperWall2D.cpp
src/FMM/: CMakeLists.txt
src/FMM/include/FMM/: EigenDef.hpp  FMMWrapper.hpp  FMMWrapperWall2D.hpp  LaplaceLayerKernel.hpp  SVD_pvfmm.hpp  StokesRegSingleLayerKernel.hpp  Timer.hpp
src/FMM/src/: FMMWrapper-c.cpp  FMMWrapper-py.cpp  FMMWrapper.cpp  FMMWrapperWall2D-c.cpp  FMMWrapperWall2D.cpp  setup.py.in
src/M2LLaplace/: CMakeLists.txt  DipoleGrad3D3D.ipynb
src/M2LLaplace/src/: Laplace1D3D.cpp  Laplace1D3DDipole.cpp  Laplace2D3D.cpp  Laplace2D3DDipole.cpp  Laplace3D3DDipole.cpp  main.cpp
src/M2LStokes/: CMakeLists.txt
src/M2LStokes/src/: Stokes1D3D.cpp  Stokes2D3D.cpp  Stokes3D3D.cpp  main.cpp
src/cmake/: FindPVFMM.cmake
src/examples/: CMakeLists.txt
src/examples/Python/: .gitignore
src/examples/StokesFMM3D/: main.cpp  regularized_stokeslet.cpp  regularized_stokeslet.hpp
src/examples/StokesFMMWall2D/: main.cpp
util/: SVD_pvfmm.hpp
